Kubernetes/Infrastructure/Logging/elastic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic
  namespace: elastic
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-ca-issuer
    cert-manager.io/common-name: elasticsearch.homelab.kbushby.com
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch.homelab.kbushby.com
    http:
      paths:
      - backend:
          service:
            name: efk-es-http
            port:
              number: 9200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - elasticsearch.homelab.kbushby.com
    secretName: elasticsearch-tls
---
# Custom Roles
# https://www.elastic.co/guide/en/cloud-on-k8s/2.0/k8s-users-and-roles.html#k8s_creating_custom_roles
---
# Fluentd + Prometheus + OpenTelemetry Users
