Kubernetes/Infrastructure/Logging/kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elastic
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-ca-issuer
    cert-manager.io/common-name: kibana-logging.homelab.kbushby.com
    external-dns.alpha.kubernetes.io/hostname: kibana-logging.homelab.kbushby.com
spec:
  ingressClassName: nginx
  rules:
  - host: kibana-logging.homelab.kbushby.com
    http:
      paths:
      - backend:
          service:
            name: kibana-kb-http
            port:
              number: 5601
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kibana-logging.homelab.kbushby.com
    secretName: kibana-logging-tls

# Username is "elastic"
# kubectl get secret efk-es-elastic-user -o jsonpath='{.data.elastic}' -n elastic | base64 -d;echo
